--- a/2020Fall/Network/Notes.tex
+++ b/2020Fall/Network/Notes.tex
@@ -20,6 +20,8 @@
 \titleformat{\section}{\Large\bfseries}{第~\thesection~节}{1em}{}
 \usepackage{lipsum} %填充文本
 
+\newcommand{\myCoral}{\color[HTML]{FF7F50}} %设置为珊瑚色
+
 \usepackage{ulem} %解决下划线、删除线之类的
 \usepackage{listings}
 \lstset{
@@ -73,11 +75,23 @@ emph = {[2]const, typedef},emphstyle = {[2]\color{red}} }
 
 \usepackage{tikz} %带圈字符
 \usepackage{etoolbox} %带圈字符 (提供robustify)
+\usepackage{xunicode-addon}
+\usepackage[para,perpage]{footmisc}
+\newfontfamily\nmfont{SH number Regular}
+%%定义带圈数字命令
+\newcommand{\quan}[1]{{\nmfont \symbol{#1}}}
+\newcommand{\kk}[1]{\quan{\numexpr32+#1}}%\kk{<参数范围1-95>}96、97、98、99分别用\quan{196} \quan{197} \quan{199} \quan{201}
 \usepackage{enumitem}
 \newcommand*{\circled}[1]{\lower.7ex\hbox{\tikz\draw (0pt, 0pt)%
     circle (.5em) node {\makebox[1em][c]{\small #1}};}} %新定义命令：带圈字符
 \robustify{\circled}
 % \usepackage{enumerate} %有序列表
+
+%%脚注使用带圈数字
+% \newcommand*\kkctr[1]{%
+%   \protect\kk{\number\numexpr\value{#1}\relax}}
+% \renewcommand*\thefootnote{\kkctr{footnote}}
+
 
 \usepackage{hyperref} %超链接
 % \usepackage[hidelinks]{hyperref} %隐藏超链接的红框
@@ -762,8 +776,257 @@ emph = {[2]const, typedef},emphstyle = {[2]\color{red}} }
 		\item 逻辑上集中的控制功能实现(software defined networking)：一个不同的(通常是远程的)控制器与本地控制代理(CAs)交互
 	\end{enumerate}
 	\section{路由选择算法}
+	\subsection{路由(route)的概念}
+	\kk{1} 路由：按照某种指标(传输延迟，所经过的站点数目等)找到一条从源节点到目标节点的较好路径
+	\begin{enumerate}
+		\item 较好路径： 按照某种指标较小的路径
+		\item 指标：站数，延迟，费用，队列长度等， 或者是一些单纯指标的加权平均
+		\item 采用什么样的指标，表示网络使用者希望网络在什么方面表现突出，什么指标网络使用者比较重视
+	\end{enumerate}\par
+	\kk{2} 路由器-路由器之间的最优路径 = 主机对之间的最优路径
+	\begin{enumerate}
+		\item 路由器连接子网，子网到路由器之间的跳数就一跳，必须要走
+		\item 路由器到下一跳路由器(节点到节点)之间的最优路径找到了
+		\item 也就找到了从源子网向目标子网所有主机对之间的最优路径
+		\item 大大降低了路由计算的规模
+		\item 在路由计算中按照子网到子网的路径计算为目标，而不是主机到主机
+	\end{enumerate}\par
+	\subsection{路由选择算法}
+	路由选择算法(routing algorithm)：网络层软件的一部分，完成路由功能\par
+	可以用图来形式化描述路由选择问题。在网络层路由选择的环境中，图的节点表示路由器，这是做出分组转发决定的点；连接这些节点的边表示这些路由器之间的物理链路；一条边的开销可以反映出对应链路的物理长度，他的链路速度，或与链路相关的金钱上的开销。一般而言，路由选择算法的一种分类方式是根据该算法是集中式还是分散式来划分。\par
+	集中式路由选择算法以所有节点之间的连通性和所有链路的开销为输入（就是整个图！）。计算本身可以在某个场点进行，或者在每台路由器的路由选择组件中重复进行。然而，这里的主要point是，集中式算法具有关于连通性和链路开销方面的\textbf{完整信息}（{\color[HTML]{FF0000}Dikjstra?}）。具有全局状态信息的算法常被称作为\textbf{链路状态}（Link State, LS）算法\par
+	在分散式路由选择算法中，路由器以迭代、分布式的算法计算出最低开销路径。每个节点仅有与其直接相连链路的开销即可直接工作。然后，通过迭代计算过程以及与相邻节点的信息交换，一个节点逐渐计算出到达某目的节点或一组目的节点的最低开销路径。后面将会介绍一个距离向量（Distance-Vector, DV）算法的分散式路由选择算法。\par
+	第二种广义分类方式是根据算法是静态的还是动态的来进行分类。在静态路由选择算法中，路由随时间的变化非常缓慢，通常是人工进行调整。而动态路由选择算法随着网络流量负载或拓扑发生变化而改变路由选择路径。一个动态算法可以周期性运行或者直接响应拓扑或开销的变化而运行。\par
+	第三种分类方式是根据是负载敏感的还是负载迟钝的进行划分负载敏感算法中，链路开销会动态变化以反映出底层链路的当前拥塞水平。不过当今的因特网路由选择算法（如RIP、OSPF和BGP）都是负载迟钝的。
+		\subsection{链路状态路由选择算法}
+		LS路由的基本工作过程
+		\begin{enumerate}
+			\item 发现相邻节点,获知对方网络地址
+			\item 测量到相邻节点的代价（延迟,开销）
+			\item 组装一个LS分组,描述它到相邻节点的代价情况
+			\item 将分组通过扩散的方法发到所有其它路由器（以上4步让每个路由器获得拓扑和边代价）
+			\item 通过Dijkstra算法找出最短路径（这才是路由算法）
+			\begin{itemize}
+				\item 每个节点独立算出来到其他节点（路由器=网络）的最短路径
+				\item 迭代算法:第k步能够知道本节点到k个其他节点的最短路径
+			\end{itemize}
+		\end{enumerate}
+		OSPF是一种LS协议，被用于internet上；IS-IS被用于internet主干中，Netware
+		\subsection{距离向量选择算法}
+		DV是一种迭代的、异步的和分布式的算法，而LS算法是一种使用全局信息的算法。说他是分布式的，是因为每个节点都要从一个或多个直接相连的邻居接受某些信息，执行计算，然后将其计算结果分发给邻居（\textit{而LS是分发的计算源数据分组！且要从所有连通片内的顶点都要接收！}）。说他是迭代的，是因为此过程一直要持续到邻居之间无更多信息可交换为止。（有趣的是，次算法是自我终止的，即没有计算应当停止的信号，他就停止了。）说他是异步的，是因为他不要求所有节点相互之间步伐一致的操作。\par
+		DV的核心算法是\href{https://www.jianshu.com/p/b876fe9b2338}{Bellman-Ford算法}。DV算法的执行和无穷级数问题\href{https://blog.csdn.net/iteye_3753/article/details/82436672}{看这篇}。记住DV算法的特点是好消息传的快，而坏消息传的慢。
+		\begin{table}[h]
+			\centering
+			\caption{LS算法和DV算法的比较}
+			\begin{tabular}{cc}
+				\toprule
+				链路状态LS&距离矢量DV\\
+				\midrule
+				链路状态信息在全网传播&距离矢量仅向邻居发送\\
+				每个节点仅传播可靠的信息：&节点传播的信息可能不正确：\\
+				亲自测量的本地链路代价&有些距离矢量是“道听途说”的\\
+				节点计算的路由不传播，&节点计算的路由要传播，\\
+				错误不扩散&会造成错误扩散\\
+				\bottomrule
+			\end{tabular}
+		\end{table}
+		\begin{figure}
+			\centering
+			\begin{minipage}{40em}
+				\centering
+				\includegraphics[scale = 0.4]{images/LSvsDV.pdf}
+			\end{minipage}
+		\end{figure}
 	\section{因特网中自治系统内部的路由选择}
+	由于规模以及ISP希望按照自己的意愿运行路由器等原因，路由器组织引入自治系统（Autonomous System, AS）来解决。自治系统是由处于同一个管理域下的网络和路由器组成的集合。每个AS被赋予一个AS编号，由ICANN分配；同一个AS中的路由器运行相同的选路协议（称
+	Intra-AS选路协议）；不同AS中的路由器可以运行不同的Intra-AS选路协议。AS与外界的接口被称作网关路由器，即在一个AS内、直接连接到 其它AS的路由器。网关路由器之间运行 Inter-AS选路协议；所有AS必须运行相同的 Inter-AS选路协议。\textit{（注意这两个用词是不一样的）}
+		\subsection{RIP}
+		路由信息协议（Routing Information Protocol, RIP）是一种DV算法，其距离矢量定义为跳数，每条链路的cost为1，最大跳数为15（16就是不可达）。每个节点每隔30秒（或者在有请求的时候）和邻居交换DV，通告（advertisement, AD）。每个通告包括至多25个目标子网，代价值和描述etc。RIP报文封装在UDP报文中发送，使用UDP端口520 （{\color[HTML]{FF0000}RIP是一个应用层协议!}即一个应用层进程为了完成网络层的功能，借用了传输层的协议）
+		\subsection{OSPF}
+		开放最短路径优先（Open Shortest Path First, OSPF）是一种LS协议，他使用洪泛链路状态信息和Dijkstra算法。OSPF的“高级” 特性(在RIP中的没有的)有：
+		\begin{enumerate}
+			\item 安全：所有的OSPF报文都是经过认证的 (防止恶意的攻击)
+			\item 允许有多个代价相同的路径存在 (在RIP协议中只有一个)
+			\item 对于每一个链路，对于不同的TOS有多重代价矩阵（不同的代价评价标准）
+			\begin{enumerate}
+				\item 例如：卫星链路代价对于尽力而为的服务代价设置比较低，对实时服务代价设置的比较高
+				\item 支持按照不同的代价计算最优路径，如:按照时间和延迟分别计算最优路径
+			\end{enumerate}
+			\item 对单播和多播的集成支持：Multicast OSPF (MOSPF) 使用相同的拓扑数据库，就像在OSPF中一样
+			\item 在大型网络中支持层次性OSPF
+		\end{enumerate}\par
+		OSPF分组被封装在IP包中传输，协议号为89。路由器周期性地、或在链路状态改变时发送OSPF链路通告。
+			\paragraph{层次性的OSPF}
+			对于一个比较大的网络，OSPF支持如下分区操作：将整个网络分为很多个area（本地区）和一个backbone（主干区），每一个area相对独立，只在本地之内进行信息的洪泛（链路状态通告）和LS网络构建。所以，每个节点只拥有本地内部的拓扑和代价信息，而关于其他区域，只知道去它的方向（最短路径）（通过边界路由器）。主干区域总是包含本AS中所有的区域边界路由器，并且还可能包含了一些非边界路由器。\par
+			做一个不一定恰当的比喻，一个AS是一个国家，每一个本地区域是一个城市，城市内部的路况对本城市以内的人公开，而对外面城市保密。每一个城市有一些城门，他们各自有通往主干区的一些道路。主干区负责对所有城际物流进行调配。
 	\section{ISP之间的路由选择：BGP}
+	边界网关协议（Broder Gateway Protocol, BGP）是一种自治系统间路由选择协议（inter-autonomous system routing protocol）是一种“事实上的”标准，他是将互联网各个AS粘在一起的胶水。在BGP中，分组并不是路由到一个特定的目的地址，相反是路由到CIDR（无类别域间路由）化的前缀，其中每个前缀表示一个子网或一个子网的集合。在BGP的世界中，一个目的地址可以采用如138.16.68/22的形式，对于这个例子包括1024个IP地址。因此，一台路由器的转发表将具有形式为$(x,I)$的表项，其中x是一个前缀（掩码），I是该路由器的接口之一的接口号。\par
+	BGP 提供给每个AS以以下方法： \kk{1} eBGP：从相邻的Ases那里获得子网可达信息 \kk{2} iBGP：将获得的子网可达信息传遍到AS内部的所有路由器 \kk{3} 根据子网可达信息和策略来决定到达子网的“好”路径。
+		\subsection{通告BGP路由信息}
+		自治系统彼此并未实际发送报文，相反是路由器在发送报文。在BGP中，每对路由器通过使用179端口的半永久TCP连接交换路由选择信息。每条直接连接以及通过该链接发送的BGP报文，称为BGP连接（BGP connection）。注意到iBGP连接并不是与物理链路对应
+		\begin{figure}
+			\centering
+			\begin{minipage}{40em}
+				\centering
+				\includegraphics[scale = 0.4]{images/eBGP_and_iBGP.pdf}
+			\end{minipage}
+		\end{figure}
+		\subsection{确定最好的路由}
+		当路由器通过BGP连接通告前缀时，他在前缀中包括一些BGP属性（BGP attribute）。用BGP术语来说，前缀及其属性称为路由（route）。两个较为重要的属性是AS-PATH和NTXT-HOP。前者包含了通告已经通过的AS的列表，可以用于检查和防止通告环路、多路径选择。在向其他AS转发时，需要将自己的AS号加在路径上。后者是AS-PATH\textit{起始的路由器接口的IP地址}，作用是如果从当前AS到下一跳AS有多个链路，NWXT-HOP可以告诉对方是通过哪个转发的。\par
+		在上面的图中假设从路由器1d到路由器3d附加一跳物理链路。在这种情况下，从AS1到3d的右边端口有两条路径。那么，对于路由“AS2 AS3 x”，其属性NEXT-HOP是路由器2a左边接口的IP地址。对于路由“AS3 x”，其属性NEXT是路由器3d最左边接口的IP地址
+		\paragraph{热土豆路由选择}
 	\section{SDN控制平面}
 	\section{ICMP：因特网控制报文协议}
+	因特网控制报文协议（Internet Control Message Protocol, ICMP），被主机和路由器用来彼此沟通网络层的信息。它最典型的用途是差错报告。ICMP通常被认为是IP的一部分（即在网络层），但从体系结构上讲它位于IP之上，这是因为ICMP报文是作为IP有效载荷承载的，他的封装解封装都和TCP、UDP一样。\par
+	ICMP报文有一个类型字段和一个编码字段，并且包含引起该ICMP报文首次生成的IP数据报的首部和前8个字节
+
+	\chapter{链路层和局域网}
+	在链路层的讨论中，我们将看到两种截然不同类型的链路层信道。第一种是广播信道，第二种是点对点通信线路，这在诸如长距离链路连接的两台路由器之间，或用户办公室计算机与他们所连接的临近以太网交换机之间等场合经常能够发现。
+	\section{引论和服务}
+	运行链路层协议（即第二层）的任何设备都称为节点（node），包括主机、路由器、交换机、网桥和Wi-Fi接入点等。沿着通信路径，连接各相邻节点通信信道的是链路（link），包括有线链路、无线链路、局域网。第二层协议数据单元叫帧（frame），封装数据报。数据链路层负责从一个节点通过链路将（帧中的）数据报发送到物理相邻节点。\par
+	网络层选定从源节点到目标节点的路径（指定出行方案），而具体的实施就交给了链路层。路径由一系列路由器和链路组成，路径上的链路可能不同。路径由一系列路由器和链路组成，路径上的链路可能不同。
+		\subsection{链路层提供的服务}
+		链路层所提供的服务细节能够随着链路层协议的不同而变化。链路层协议能够提供的可能服务包括：
+		\begin{enumerate}
+			\item \textit{成帧}（framing）。帧的结构由链路层协议规定。
+			\item \textit{链路接入}。媒体访问控制（Medium Access Control, MAC）协议规定了帧在链路层上传输的规则。
+			\item \textit{可靠交付}。{\myCoral （注意其实链路层是可以有可靠交付的选项的）}与运输层可靠交付服务类似，链路层的可靠交付服务通常是通过确认和重传取得的。链路层可靠交付通常用于易于产生高差错率的链路，例如无线链路，其目的是本地（也就是在差错发生的链路上）纠正一个差错，而不是通过运输层或应用层协议迫使进行端到端的数据重传
+			\item \textit{差错检验和纠正}。通常让发送节点在帧中包含差错检验比特，让接收节点进行检查。相比于运输层和网络层有限形式的差错检测，链路层的通常更复杂，并且用硬件实现，而且能够更准确滴确定帧中的差错出现的位置。
+			\item \textit{半双工和全双工}。半双工：链路可以双向传输，但一次只有一个方向。半双工通信时，提供收发转换。
+		\end{enumerate}
+		\subsection{链路层在何处实现}
+		链路层的主体部分 在网络适配器（network adapter）中实现的，网络适配器有时候也称为网络接口卡（Network Interface Card, NIC）。位于网络适配器核心的是链路层控制器，该控制器通常是一个实现了许多链路层服务（成帧、链路接入、差错检测等）的专用芯片
+	\section{差错检测和纠正技术}
+	链路层通常提供的两种服务是比特级差错检测和纠正，即对从一个节点发送到另一个物理上的临近节点的链路层帧中的比特损伤进行检测和纠正。为了保护比特免收差错，使用差错检测和纠正比特（Error-Detection and Correction, EDC）来增强数据D。现在来研究在数据传输中检测差错的三种技术：奇偶校验（用来描述差错检测和纠正背后隐含的基本思想）、检验和方法（通常更多的用于运输层）和循环冗余检测（通常更多的用于在适配器中的链路层）\par
+	由于在组成原理笔记中已经涉及到此部分内容，在计网笔记中仅记录一小部分。
+		\subsection{奇偶校验}
+		奇偶校验的一种进阶办法是二位奇偶校验（two-dimensional parity）方案，这里D中的d个比特被划分为i行j列。对每行和每列计算奇偶值。产生的i+j+1个奇偶比特构成里差错检验比特。这样接收方可以利用列和行对索引来实际识别发生差错的比特并纠正他。\par
+		接收方检测和纠正差错的能力被称为前向纠错（Forward Error Correction, FEC）。在网络环境中，FEC可以单独应用，或与链路层自动重传请求（Automatic Repeat-reQuest，ARQ）技术一起使用。FEC技术的价值在于可以减少所需的发送方重发的次数
+	\section{多路访问链路和协议}
+	点对点链路由链路一端的单个发送方和链路另一端的单个接收方组成。第二种是广播链路，它能够让多个发送和接收节点都连接到相同的、单一的、共享的广播信道上。在本节，先研究一个对链路层很重要的问题：如何协调多个发送和接收节点对一个共享广播信道的访问，这就是多路访问问题。节点通过多路访问协议来规范他们在 共享的广播信道上的传输行为。由于多个节点可能在同时传输帧，那么这时候所有节点同时收到很多帧；也就是说，传输的帧在所有的接收方处碰撞（collide）。通常，当碰撞发生时，没有一个接受节点能够有效的获得任何传输的帧；在某种意义下，碰撞帧的信号纠缠在一起，因此，涉及此次碰撞的所有帧都丢失了。\par
+	我们将任何多路访问协议划分为3种类型之一：信道划分协议（channel partitioning protocol），随机接入协议（random access protocol）和轮流协议（taking-turns protocol）。在理想情况下，对于速率为R bps的广播信道，多路访问协议应该具有以下所期望的特性：
+	\begin{enumerate}
+		\item 当仅有一个节点发送数据时，该节点具有R bps的吞吐量
+		\item 当有M个节点发送数据时，每个节点吞吐量为R/M bps。这不必要求M个节点中的每一个节点总是有R/M的瞬间速率，而是每个节点在一些适当定义的时间间隔内应该有R/M的平均传输速率
+		\item 协议是分散的；这就是说不会因某主节点故障而使整个系统崩溃
+		\item 协议是简单的，使实现不昂贵
+	\end{enumerate}
+		\subsection{信道划分协议}
+		比如可以有时分多路复用（TDM）和频分多路复用（FDM）可以用。TDM将时间划分为时间帧（time frame），并进一步划分每个时间帧为N个时隙（slot）。（应当注意的是，不应当把TDM时间帧与在发送和接收适配器之间交换的链路层数据单元相混淆。为了减少混乱，我们将后者称为分组）第三种信道划分协议是码分多址（Code Division Multiple Access, CDMA）。CDMA为每个节点分配一种不同的编码\par
+		打一个比方，TDM就像是不同的人在不同的时刻讲话；而FDM是不同的组在不同的小房间里通信；而CDMA则是不同的人使用不同的语言讲话\par
+		具体的工作原理是：
+		\begin{enumerate}
+			\item 将每个比特时间进一步划分为m个微时隙(称chip)
+			\item 每个节点被分配一个惟一的m比特码序列(称chip code)
+			\item 发送方编码:发送“1”=发送chip code;发送“0”=发送chip code的反码
+			\item 信号干扰:多个节点发送的信号在信道中线性相加
+			\item 接收方解码:用发送方的chip code与信道中收到的混合 信号计算内积，恢复出原数据
+			\item 前提条件:任意两个chip code必须是相互正交的
+			\item CDMA允许所有节点同时使用整个信道!
+		\end{enumerate}
+		\subsection{随机接入协议}
+		在随机接入协议中，一个传输节点总是以信道的全部速率进行发送。他并没有节点之间的预先协调，而是在有碰撞时，涉及碰撞的每个节点反复的重发他的帧（分组），直到该帧无碰撞为止。但是当一个节点经历一次碰撞时，他不必立刻重发该帧。\textit{相反，他在重发之前等待一个随机时延}。涉及碰撞的每个节点独立地随机选择时延。
+			\paragraph{时隙ALOHA}
+			在对时隙ALOHA的描述中，我们做以下假设：
+			\begin{itemize}
+				\item 所有帧由L比特组成
+				\item 时间被划分为长度为L/R秒的时隙，每个时隙可以发送一帧
+				\item 节点只在时隙开始的时候传帧
+				\item 节点在时钟上是同步的
+				\item 如果两个或多个节点在一个时隙传输，所有的站点都能检测到冲突
+			\end{itemize}\par
+			而时隙ALOHA的运行过程如下：\kk{1} 当节点获取新的帧，在下一个时隙传输 \kk{2} 传输时没有检测到冲突，成功（节点能够在下一时隙发送新帧） \kk{3} 检测时如果检测到冲突，失败（节点在每一个随后的时隙以概率p重传帧直到成功）。时隙ALOHA的优点很明显，比如 \kk{1} 节点可以以信道带宽全速连续传输 \kk{2} 高度分布:仅需要节点之间在时隙上的同步 \kk{3} 简单。\par
+			当只有一个活跃节点时，时隙ALOHA工作出色，可是当由多个活跃节点时，将会出现两个要考虑的效率问题。首先，当有多个活跃节点时，一部分时隙将碰撞（而浪费掉）。第二个考虑是，时隙的另一部分是“空闲”的，因为所有活跃节点由于概率传输策略会节制传输。刚好有一个节点传输的时隙称为一个成功时隙（successful slot）。\par
+			时隙多路访问协议的\textbf{效率}定义为：当有大量的活跃节点且每个节点总有大量的帧要发送时，长期运行中成功时隙的份额。当有N个活跃节点时，由概率论知识（二项分布）时隙ALOHA的效率是$Np(1-p)^{N-1}$。当N趋于$\infty$时极限效率为$1/e\approx0.37$
+			\paragraph{ALOHA}
+			在纯ALOHA是一个非时隙、完全分散的协议，他不要求节点在时钟上同步，当一帧首次到达，节点立刻将该帧完整的传送进广播信道，如果发生了碰撞，就立即以概率p传输该帧，否则等待一个帧传输时间。优点是真的简单，无须在时间节点上进行同步。但是相应的，冲突的概率增加，极限效率减为$1/2e\approx1.75$
+			\paragraph{载波侦听多路访问}
+			在时隙和纯ALOHA中，一个节点传输当决定独立于连接到这个广播信道上的其他节点的活动。\textit{特别是，一个节点不关心在他开始传输时是否有其他节点碰巧在传输。}所以我们增加两个重要的规则：
+			\begin{enumerate}
+				\item \textit{说话之前先听。}这一点称为载波侦听（carrier sensing），即一个节点在传输之前先听信道，直到监测到一掉段时间没有传输，然后开始传输
+				\item \textit{如果与他人同时开始说话，停止说话。}这一点被称为碰撞检测（collision detection），即当一个传输节点在传输时一直同时在侦听此信道。如果他监测到另一个节点正在传输干扰帧，就停止传输，在重复“侦听-空闲时传输”循环之前等待一段随机时间
+			\end{enumerate}\par
+			这两个规则包含在载波侦听多路访问（Carrier Sense Multiple Access, CSMA）和具有碰撞检测的CSMA（CSMA with Collision Detection, CSMA/CD）协议族中。这里，我们将考虑一些CSMA和CSMA/CD最重要的和最基本的特性。\par
+				\subparagraph{如果所有节点都被载波侦听了，为什么还会发生碰撞}
+				由传播延迟造成：两个节点可能侦听不到正在进行的传输。这里要学会读下面这个时空图，颜色区域的意思是分组从一个几点向双向传输，在时间轴上的占用段。而两种颜色的交叠区域即为冲突时间。显然广播信道的端到端信道传播时延（channel propagation delay）（即信号从一个节点传播到另一个节点所花费的时间）在决定去性能方面起着关键的作用。该传播时延越长，载波侦听节点不能侦听到网络中另一个节点已经开始传输的机会就越大。
+				\begin{figure}[h]
+					\centering
+					\begin{minipage}{40em}
+						\centering
+						\includegraphics[scale = 0.5]{images/CSMA_collision.pdf}
+						\caption{其实是CSMA/CD的图}
+					\end{minipage}
+				\end{figure}
+			\paragraph{具有碰撞检测的载波侦听多路访问}
+			\textit{注意上面那个图中，在“碰撞检测/放弃时间”之后，B和D都停止了传输动作。}显然，在多路访问协议中加入碰撞检测，通过不传输一个无用的、（由来自另一个节点的帧干扰）损坏的帧，将有助于改善协议的性能。终止传输之后，适配器等待一个随机时间量。等待一个随机（而不是固定）的时间量的需求是明确的——如果两个节点同时传输帧，然后这两个节点等待相同固定的时间量，他们将持续碰撞下去。\par
+			二进制指数后退算法解决了间隔时间的选择的问题。特别的，当传输一个给定帧时，在该帧经历了一连串的n此碰撞后，节点随机的从$\{0,1,2,\cdots,2^n-1\}$中选择一个个K值。对于以太网，一个节点等待的实际时间量是$K\cdot512$比特时间，n能够取的最大值在10以内\par
+			\paragraph{CSMA/CD效率} CSMA/CD效率定义为：当有大量的活跃节点，且每个节点由大量的帧要发送时，帧在信道中无碰撞的传输的那部分时间在长期运行时间中所占的份额。令$d_{prop}$表示信号能量在任意两个适配器之间传播所需的最大时间。令$d_{trans}$表示传输一个最大长度的以太网帧的时间。则可以列出下面的近似式：
+			\[efficiency=\frac{1}{1+5d_{prop}/d_{trans}}\]
+		\subsection{轮流协议}
+		{\myCoral 多路访问协议的两个理想特性是：\kk{1}当只有一个节点活跃时，该活跃节点具有满吞吐量；\kk{2}当有M个节点活跃时，每个活跃节点的吞吐量接近平均分配。}ALOHA额CSMA具有第一个特性但不具备第二个特性。所以引出了下面要讨论的轮流协议们。主要讨论两种比较重要的：轮询协议和令牌传递协议。
+			\paragraph{轮询协议}
+			要求一个节点被指定为主节点，他轮询每个节点，并告诉他能够传输的帧的最多数量。主节点通过观察在信道上是否缺乏信号，来决定一个节点何时完成了帧的发送。\par
+			轮询协议引入了轮询时延（轮询开销），且从节点会受到更多限制（借用OS进程调度的话讲，一个没有在传输信号的节点会阻塞（影响）其他节点）。更严重的问题是，如果主节点down了，整个系统都会崩溃掉
+			\paragraph{令牌传递协议}
+			一个称为令牌（token）的小的特殊帧在节点之间以某种固定的次序进行交换（像是一个互斥锁）。当一个节点收到令牌时，仅当他有一些帧要发送时，他才持有这个令牌，并发送最大数目的帧数；否则，他立即讲这个令牌向下一个节点转发。但是，令牌本身会消耗一定的带宽，而且，一个节点的故障可能会是整个信道崩溃。或者一个节点偶然忘记了释放令牌 ，则必须调用某些恢复步骤使令牌返回到循环中。如果令牌丢失，则需要通过复杂机制重新生成令牌。
+		\subsection{DOCSIS：用于电缆因特网接入的链路层协议}
+		PPT上面没有，不想看了orz
+	\section{交换局域网}
+	先来看一下三种范围的网络概念：
+	\begin{enumerate}
+		\item 局域网LAN（Local Area Network）：将小范围内的计算机及外设连接起来的网络，范围在几公里以内
+		\item 城域网MAN（Metropolitan Area Network ）：通常覆盖一个城市的范围（几十公里），如有线电视网、宽带无线网等。城域网要能支持数据、音频和视频在内的综合业务，服务质量好，支持用户数量多
+		\item 广域网WAN（Wide Area Network）：通常覆盖一个国家或一个洲（一百公里以上），规模和容量可任意扩大
+	\end{enumerate}
+		\subsection{链路层寻址和ARP}
+		每一块网络适配器(网卡)固定分配一个地址，称为MAC地址，也称物理地址、硬件地址、链路层地址等。MAC地址长6个字节，一般用由“ : ”或“ - ”分隔的6个十六进制数表示。MAC地址由IEEE负责分配，每块适配器的地址是全球唯一的：网卡生产商向IEEE购买一块MAC地址空间（前3字节）生产商确保生产的每一块网卡有不同的MAC地址。MAC地址固化在网卡的ROM中，不过现在用软件改变网卡的MAC地址也是可能的。\par
+		事实上，并不是主机或路由器具有链路层地址，而是他们的适配器（即网络接口）具有链路层地址，就像IP地址一样。重要的是注意到\textit{链路层交换机并不具有与他们的接口（这些接口是与主机和路由器相连的）相关联的链路层地址。}适配器的MAC地址具有扁平结构（这与层次结构相反），而且无论适配器到哪里用都不会变化。与之形成对照的是，IP地址具有层次结构（即一个网络部分和一个主机部分），而且当主机移动时，主机的IP地址需要改变。\par
+		适配器可以接收一个并非向他寻址的帧。当适配器接收到一个帧时，将检查该帧中的目的MAC地址是否与他自己的MAC地址匹配。如果匹配，该适配器提取出封装的数据报，并将该数据报沿协议栈向上传递。不匹配就丢弃。目的MAC地址共有三种类型：
+		\begin{enumerate}
+			\item 单播地址：适配器的MAC地址，地址最高比特为0
+			\item 多播地址：标识一个多播组的逻辑地址，地址最高比特为1
+			\item 广播地址：\texttt{ff:ff:ff:ff:ff:ff}
+		\end{enumerate}
+			\paragraph{地址解析协议}
+			在网络层地址（如因特网的IP地址）和链路层地址（即MAC地址）之间进行转换，就是地址解析协议（Address Resolution Protocol, ARP）的任务。\par
+			每台主机或路由器在其内存中具有一个ARP表，这张表包含IP地址到MAC地址的映射关系。该ARP表也包含一个寿命（TTL）值。注意这张表\textbf{不必为该子网上的每台主机和路由器都包含一个表项}；某些可能从未进入到该表中，某些可能已经过期。从一个表项放置到某ARP表开始，过期时间通常是20分钟。\par
+				\subparagraph{假如cache命中失败，采用老的策略，并在收到ARP响应后将地址绑定缓存到ARP表中}
+				当一个主机要发送一个数据报时，该数据报要IP寻址到本子网上另一台主机或路由器。发送主机需要获得给定IP地址的目的主机的MAC地址。可是如果发送方的ARP表中当前没有该目标主机的表项时（是不是有一点像page fault呢），发送方便用ARP协议来解析这个地址。\par
+				首先，发送方构造一个称为ARP分组（ARP packet）的特殊分组。然后他广播包含B的IP地址的ARP查询包（DEST MAC ADDRESS = FF-FF-FF-FF-FF-FF）。当接收方收到这个查询包时，（由于广播地址）每个适配器都把该帧中都ARP分组向上传递给ARP模块。这些ARP模块都检查他的IP地址是否与ARP分组中的目的IP地址相匹配。与之匹配的一个给查询的主机发送回一个带有所希望映射的相应ARP分组。
+				\subsection{关于ARP缓存}
+				\begin{enumerate}
+					\item 每个节点在内存中维护一个地址映射(绑定)
+					表，称ARP表。
+					\item 每次发送数据报前先查询ARP缓存，找不到需要的地址映射再发送ARP请求进行查询，并在收到ARP响应后将地址绑定缓存到ARP表中。
+					\item ARP缓存中的信息动态更新，并在超时(一般为15~20分钟)后删除。
+					\item 从ARP请求中获取地址绑定信息：节点可以收到全部的ARP请求报文，从而可以将发送节点的地址绑定缓存到自己的ARP表中。
+					\item ARP是即插即用的（节点自己创建ARP的表项无需网络管理员的干预）节点在启动时自动广播自己的地址绑定：
+					\begin{enumerate}
+						\item 节点A在启动时主动广播一个ARP请求，在目标字段内填入自己的IP地址。
+						\item 收到ARP请求的节点将A的地址绑定保存在自己的ARP表中。
+						\item 若A收到ARP响应，报告IP地址重复错误。
+					\end{enumerate}
+				\end{enumerate}
+			\paragraph{发送数据报到子网以外}
+			\textit{注意每台主机只有一个IP地址和一个适配器。但是，一台路由器对它每个接口都有一个IP地址。对路由器的每一个接口，（在路由器中）也有一个ARP模块和一个适配器。当然，网络中的每个适配器都有自己的MAC地址。}\par
+			当一台主机发送一个数据报到子网以外时，它填写目标地址的IP地址，以及子网中那个路由器接口的MAC地址（通过ARP获得）。而此路由器在发送的帧中填入数据报要被转发的下一个正确接口。如在第四章中讨论的，这是通过查询路由器中的转发表来完成的。转发表告诉这台路由器该数据报要走的路径。不过，下一跳的MAC地址也是通过ARP方法获得的
+		\subsection{Ethernet：以太网}
+		以太网是第一个广泛应用的局域网技术，也是现在占主导地位的有线局域网技术。其优点是比其他的局域网技术简单、成本低
+			\paragraph{物理拓扑}
+			\begin{enumerate}
+				\item 总线型拓扑：以同轴电缆作为共享传输媒体（总线），所有节点通过特殊接口连接到这条总线上
+				\item 基于集线器（hub）的星型拓扑：一个物理层设备，把从一个端口进入的物理信号（光，电）放大后立即从其它端口输出
+				\item 今天的以太网采用基于交换机的星型拓扑：主机通过双绞线或光纤连接到交换机。交换机在端口之间存储-转发帧。交换式以太网是无冲突的!
+			\end{enumerate}
+			注意：\textbf{交换机能增加总带宽}：该交换机通过处理帧的MAC地址，从一个输入端向一个或多个输出端转发分组，增加了网络总带宽。如一个单个的以太网段只能提供100 Mpbs的带宽，若输入与输出主机两两不同的话，则以太网交换机可提供100×n/2 Mpbs的带宽（n为交换机输入和输出端口的数目）。而此时这些主机之间同时可以进行双工通信，而不会互相干扰
+			\paragraph{碰撞域\&广播域}
+			碰撞域描述了一组共享网络访问媒体的网络设备覆盖的区域（就是会信道冲突的区域）。广播域是指广播分组能直接到达的区域（就是一个子网内）
+			\paragraph{以太网帧结构}
+			\begin{figure}[h]
+				\centering
+				\begin{minipage}{40em}
+					\centering
+					\includegraphics[scale = 0.4]{images/ethernet_frame.pdf}
+				\end{minipage}
+			\end{figure}
 \end{document}
